update product and contact page

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <ul class="flex space-x-4 mt-2 hidden md:flex">
                 <li><a href="./index.html" class="text-dark hover:text-green-500">Home</a></li>
                 <li><a href="./product.html" class="text-dark hover:text-green-500">Products</a></li>
-                <li><a href="#" class="text-dark hover:text-green-500">Contact</a></li>
+                <li><a href="./contact.html" class="text-dark hover:text-green-500">Contact</a></li>
             </ul>
         </div>
     </nav>
