--- a/product.html
+++ b/product.html
@@ -26,20 +26,63 @@
             <ul class="flex space-x-4 mt-2 hidden md:flex">
                 <li><a href="./index.html" class="text-dark hover:text-green-500">Home</a></li>
                 <li><a href="./product.html" class="text-dark hover:text-green-500">Products</a></li>
-                <li><a href="#" class="text-dark hover:text-green-500">Contact</a></li>
+                <li><a href="./contact.html" class="text-dark hover:text-green-500">Contact</a></li>
             </ul>
         </div>
     </nav>
 
     <!-- search section -->
     <section class="bg-white p-4 md:py-12">
-        <div class="container mx-auto">
-            <h2 class="text-2xl font-bold text-dark">Search Products</h2>
+        <div class="container text-center">
+            <h2 class="text-2xl font-bold text-dark">Our Products</h2>
             <form class="mt-4">
-                <input type="text" placeholder="Search..." class="border border-gray-300 p-2 rounded w-full md:w-1/2">
+                <input type="text" placeholder="Search for a product ..." class="border border-gray-300 p-2 rounded w-full md:w-1/2">
                 <button type="submit" class="mt-2 px-4 py-2 bg-green-500 text-white rounded hover:bg-green-600 transition duration-300">Search</button>
             </form>
         </div>
+              <div class="mt-8 grid grid-cols-1 md:grid-cols-4 gap-6 px-5">
+                <div class="p-6 rounded-lg border border-green-200">
+                    <img src="./image/bestseller_1.svg" alt="Product 1" class="w-full h-48  rounded mb-4">
+                    <h3 class="text-xl font-semibold text-dark">Eco-Friendly Bag</h3>
+                    <p class="mt-2 text-gray-600">$19.99</p>
+                </div>
+                <div class="p-6 rounded-lg border border-green-200">
+                    <img src="./image/bestseller_2.svg" alt="Product 2" class="w-full h-48  rounded mb-4">
+                    <h3 class="text-xl font-semibold text-dark">Sustainable Water Bottle</h3>
+                    <p class="mt-2 text-gray-600">$15.99</p>
+                </div>
+                <div class="p-6 rounded-lg border border-green-200">
+                    <img src="./image/bestseller_3.svg" alt="Product 3" class="w-full h-48  rounded mb-4">
+                    <h3 class="text-xl font-semibold text-dark">Organic Cotton T-Shirt</h3>
+                    <p class="mt-2 text-gray-600">$24.99</p>
+                </div>
+                <div class="p-6 rounded-lg border border-green-200">
+                    <img src="./image/bestseller_4.svg" alt="Product 4" class="w-full h-48  rounded mb-4">
+                    <h3 class="text-xl font-semibold text-dark">Organic Cotton T-Shirt</h3>
+                    <p class="mt-2 text-gray-600">$24.99</p>
+                </div>
+
+                       <div class="p-6 rounded-lg border border-green-200">
+                    <img src="./image/bestseller_1.svg" alt="Product 1" class="w-full h-48  rounded mb-4">
+                    <h3 class="text-xl font-semibold text-dark">Eco-Friendly Bag</h3>
+                    <p class="mt-2 text-gray-600">$19.99</p>
+                </div>
+                <div class="p-6 rounded-lg border border-green-200">
+                    <img src="./image/bestseller_2.svg" alt="Product 2" class="w-full h-48  rounded mb-4">
+                    <h3 class="text-xl font-semibold text-dark">Sustainable Water Bottle</h3>
+                    <p class="mt-2 text-gray-600">$15.99</p>
+                </div>
+                <div class="p-6 rounded-lg border border-green-200">
+                    <img src="./image/bestseller_3.svg" alt="Product 3" class="w-full h-48  rounded mb-4">
+                    <h3 class="text-xl font-semibold text-dark">Organic Cotton T-Shirt</h3>
+                    <p class="mt-2 text-gray-600">$24.99</p>
+                </div>
+                <div class="p-6 rounded-lg border border-green-200">
+                    <img src="./image/bestseller_4.svg" alt="Product 4" class="w-full h-48  rounded mb-4">
+                    <h3 class="text-xl font-semibold text-dark">Organic Cotton T-Shirt</h3>
+                    <p class="mt-2 text-gray-600">$24.99</p>
+                </div>
+            </div>
     </section>
 
     <!-- footer section -->
